# Gravity_Score

./: .dockerignore  .env.example  .gitignore  .replit  49ers_roster.json  ALL_SCRAPERS_RECRUITING_IMPLEMENTATION.md  ASYNC_ENHANCEMENTS_SUMMARY.md  AUTO_NUMBERING_SYSTEM.md  CHANGELOG.md  COMMERCIAL_VALUE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_IMPUTATION_GUIDE.md  COMPLETE_RECRUITING_IMPLEMENTATION.md  COMPREHENSIVE_RISK_AND_AGE_FIX.md  COMPREHENSIVE_ROSTER_TEST.sh  CONTRACT_COLLECTION_IMPLEMENTATION.md  CONTRACT_COLLECTOR_ISSUE.md  CURRENT_STATUS_SUMMARY.md  DATA_QUALITY_FIX_SUMMARY.md  Dockerfile.gravity-api  Dockerfile.gravity-ml  ESPN_API_BUG_REPORT.md  FAST_MODE_GUIDE.md  FEATURE_TESTING_MCP_SETUP.md  FREE_COLLECTORS_README.md  FREE_COLLECTORS_SUMMARY.md  GET_PERPLEXITY_KEY.md  GRAVITY_PIPELINE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  ML_IMPLEMENTATION_SUMMARY.md  ML_PIPELINE_GUIDE.md  NBA_FAST_MODE_GUIDE.md  NBA_GAMELOG_FIX_SUMMARY.md  NBA_PERPLEXITY_IMPLEMENTATION.md  NBA_ROSTER_SOLUTION.md  NBA_SCRAPER_IMPLEMENTATION_SUMMARY.md  NBA_VERIFIED_ROSTERS_README.md  NCAAF_IMPUTATION_UPDATE.md  NCAAF_QUICK_REFERENCE.md  NEWS_SOCIAL_IMPROVEMENTS.md  (+192 more)
api/: __init__.py  gravity_api.py  model_cache.py  schemas.py
attached_assets/: Pasted--IMPROVED-NFL-DATA--1752768277902_1752768277903.txt  Pasted--IMPROVED-NFL-DATA--1752768291005_1752768291005.txt  Pasted--IMPROVED-NFL-DATA--1752768303494_1752768303494.txt  Pasted--IMPROVED-NFL-DATA--1752768317156_1752768317156.txt  Pasted--LLM-Agent-Instruction-Set-Gravity-Score-System-Production-Implementation-High-Level-Purpos-1753049041542_1753049041543.txt  Pasted--Prompt-for-an-AI-agent-High-level-mission-You-are-to-design-and-implement--1751480925568_1751480925570.txt  Pasted--TASK-Enrich-athlete-profiles-by-retrieving-and-parsing-unstructured-data-from-three-external-so-1753047474956_1753047474956.txt  Pasted-25-07-17-21-44-08-612-nfl-gravity-pipeline-ERROR-Comprehensive-data-collection-failed-for-Seba-1752854737541_1752854737541.txt  Pasted-Agentic-Features-Extract-Copy-page-Extract-structured-data-from-pages-using-LLMs-The-extract-endp-1752776674170_1752776674170.txt  Pasted-Below-is-the-same-end-to-end-pipeline-but-with-no-proprietary-Mistral-API-we-instead-load-a-1751646312929_1751646312930.txt  Pasted-Crawl-Crawl-Copy-page-Firecrawl-can-recursively-search-through-a-urls-subdomains-and-gather-the-c-1752776612019_1752776612019.txt  Pasted-Here-s-a-copy-paste-one-shot-prompt-you-can-give-to-your-LLM-coding-agent-It-tells-it-exactly-wha-1757891273335_1757891273337.txt  Pasted-Here-s-a-set-of-implementation-notes-you-can-hand-off-to-an-LLM-powered-coding-assistant-to-buil-1751646282063_1751646282064.txt  Pasted-Here-s-a-tight-implementation-ready-brainstorm-for-both-asks-How-to-define-portfolio-amount-f-1757895554209_1757895554210.txt  Pasted-Live-Logs-2025-07-17-15-30-55-793-nfl-gravity-WARNING-Unknown-position-G-2025-07-17-15-30-55--1752766723417_1752766723418.txt  Pasted-NFL-Gravity-Score-Dashboard-All-Players-Data-Viewer-NFL-Player-Database-All-Teams-Filter-by-Team--1753023815831_1753023815833.txt  Pasted-Perfect-here-s-a-copy-paste-locked-down-prompt-you-can-give-your-LLM-coding-agent-It-adds-a--1757892226434_1757892226435.txt  Pasted-ROLE-Senior-frontend-engineer-Your-only-job-is-to-build-a-dashboard-that-exactly-matches-my-screen-1757892195542_1757892195542.txt  Pasted-Scraping-a-URL-with-Firecrawl-scrape-endpoint-Used-to-scrape-a-URL-and-get-its-content-Inst-1752776558944_1752776558944.txt  Pasted-rowse-and-filter-comprehensive-NFL-player-data-with-advanced-search-capabilities-Filters-Search-P-1753027425794_1753027425794.txt
config/: gravity_composite_weights.json  gravity_score_calibration.json  model_promotion_policy.json
data/: authentic_gravity_scores_20250721_040314.csv  comprehensive_players_20250717_182602.csv  comprehensive_players_20250717_184910.csv  comprehensive_players_20250718_172139.csv  comprehensive_players_20250718_172740.csv  comprehensive_players_20250718_173114.csv  comprehensive_players_20250718_190437.csv  comprehensive_players_20250718_190819.csv  comprehensive_players_20250720_022540.csv  comprehensive_players_20250720_024215.csv  comprehensive_players_20250720_155913.csv  comprehensive_players_with_gravity_20250721_145137.csv  comprehensive_players_with_gravity_20250721_161823.csv  comprehensive_players_with_gravity_20250722_025043.csv  comprehensive_test_authentic_20250720_155428.csv  consistent_gravity_all_players_20250722_024836.csv  ecos_methodology_all_players_20250722_024930.csv  ecos_players.csv  enhanced_players_ages_heights_20250720_152546.csv  enhanced_position_specific_20250720_161553.csv  favorite_players.json  favorite_players_comprehensive.csv  firecrawl_players_20250718_162003.csv  height_corrected_players_20250720_150500.csv  metadata_20250702_185939.json  metadata_20250704_155543.json  metadata_20250717_152457.json  metadata_20250717_153101.json  metadata_20250717_160554.json  metadata_20250717_163341.json  metadata_20250717_165351.json  metadata_20250717_184140.json  metadata_20250717_213420.json  metadata_20250717_214408.json  metadata_20250718_163047.json  metadata_20250718_170017.json  metadata_20250718_171354.json  metadata_20250720_020738.json  metadata_20250720_023720.json  metadata_20250720_024319.json  (+86 more)
deploy/: ddl.sql
docs/: APP_OVERVIEW.md  CRAWLER_GUIDE.md  CRAWLER_INTEGRATION.md  EXECUTIVE_TECH_BRIEF.md  GRAVITY_CAPIQ_DESIGN.md  GRAVITY_NETWORK_V2.md  GRAVITY_PLATFORM_SOURCE_OF_TRUTH.md  GRAVITY_UNIFIED_SPEC.md  NIL_APPLICATIONS.md  PARTNER_API_ECOSYSTEM_DEV_GUIDE.md  PLATFORM_PRODUCTION_AND_ROSTER_OPS.md  SCORE_RECALCULATION.md  SCORING_PIPELINE.md  SCRAPERS_AND_GRAVITY_ML_SOURCE_OF_TRUTH.md  SCRAPER_ARCHITECTURE.md  SCRAPER_DATA_FLOW.md  SCRAPER_EXHAUSTIVE.md  SCRAPER_OVERVIEW.md  SCRAPER_QUICK_REFERENCE.md  TERMINAL_PRODUCTION_READINESS_RUNBOOK.md
feature_testing_mcp/: ENV_CONFIG.md  README.md  __init__.py  __main__.py  config.py  exceptions.py  server.py  sheets_client.py  test_executor.py  test_registry.py
gravity-terminal/: .dockerignore  (+11 more)
(+892 files in other folders)
