[project]
name = "gravity-score"
version = "1.0.0"
description = "Gravity Score - Player marketability scoring system with MCP feature testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Progress bars with time estimation
    "tqdm>=4.66.0",
    # HTTP and async requests
    "requests>=2.32.0",
    "aiohttp>=3.13.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    # Date/time utilities
    "python-dateutil>=2.9.0",
    # Sentiment analysis
    "vaderSentiment>=3.3.2",
    # MCP and Feature Testing
    "mcp[cli]>=1.10.1",
    "fastmcp>=2.0.0,<3.0.0",
    "gspread>=5.12.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "typer>=0.16.0",
]

[project.scripts]
feature-testing-mcp = "feature_testing_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feature_testing_mcp", "gravity"]

[tool.hatch.build]
packages = ["feature_testing_mcp", "gravity"]

